# lattice

./: README.md  devcontainer.yml  docker-compose.yml  lattice.code-workspace
.github/workflows/: api.yaml  migrator.yaml  web.yaml
api/: .env.example  .gitignore  Cargo.toml  Dockerfile
api/.devcontainer/: devcontainer.extend.yml  devcontainer.json
api/src/: entities.rs  env.rs  graph.rs  identity.rs  main.rs  prelude.rs
api/src/entities/: meta.rs  prelude.rs
api/src/graph/: build.rs  date.rs  membership.rs  meta.rs  mutation.rs  node.rs  prelude.rs  query.rs  user.rs  utils.rs
kernel/: Cargo.toml
kernel/examples/: entity.rs
kernel/src/: entities.rs  lib.rs  prelude.rs
kernel/src/entities/: id.rs  membership.rs  meta.rs  prelude.rs  user.rs
migrator/: .env.example  migrate-mongo-config.js  package.json
migrator/migrations/: 20210512232959-remove_firebase_ids_from_users.js  20210513134010-add_email_index_to_users.js  20210514050930-add_text_index_to_users.js  20210519185259-add_indexes_to_memberships.js  20210522190009-use_object_refs.js  20210525120313-use_dates.js
web/: .env.example  .eslintrc  .prettierignore  Dockerfile  gqless.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
web/.devcontainer/: devcontainer.extend.yml  devcontainer.json
web/components/: authentication.tsx  chakra.tsx  container.tsx  firebase.tsx  index.tsx  input.tsx  link.tsx  membership.tsx  modal.tsx  notifications.tsx  page.tsx  placeholder.tsx  search.tsx  toast.tsx  user.tsx
web/components/gqless/: gqless.ts  index.ts  schema.generated.ts
web/pages/: _app.tsx  _document.tsx  directory.tsx  index.tsx  organization.tsx
