[package]
name = "lattice-api"
version = "0.1.0"
authors = ["Steven Xie <dev@stevenxie.me>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.40"
chrono = "^0.4.19"
dotenv = "^0.15.0"
futures = "^0.3.14"
graphql = { package = "async-graphql", version = "^2.8.4", features = ["chrono"] }
graphql_warp = { package = "async-graphql-warp", version = "^2.8.4" }
http = "^0.2.4"
serde = { version = "^1.0.125", features = ["derive"] }
tokio = { version = "^1.5.0", features = ["rt-multi-thread", "macros"] }
tracing = "^0.1.26"
tracing_subscriber = { package = "tracing-subscriber", version = "^0.2.18" }
warp = "^0.3.1"


[build-dependencies]
anyhow = "^1.0.40"
chrono = "^0.4.19"
git = { package = "git2", version = "^0.13.18" }
semver = "^0.11.0"

[profile.dev]
split-debuginfo = "unpacked"
