[package]
name = "lattice-api"
version = "0.1.0"
authors = ["Steven Xie <dev@stevenxie.me>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.40"
async_trait = { package = "async-trait", version = "^0.1.50" }
cache_control = "^0.1.0"
chrono = { version = "^0.4.19", features = ["serde"] }
dotenv = "^0.15.0"
graphql = { package = "async-graphql", version = "^2.8.4", features = ["chrono"] }
graphql_warp = { package = "async-graphql-warp", version = "^2.8.4" }
http = "^0.2.4"
jwt = { package = "jsonwebtoken", version = "^7.2.0" }
lattice = { package = "lattice-kernel", path = "../kernel" }
lazy_static = "^1.4.0"
serde = { version = "^1.0.125", features = ["derive"] }
tokio = { version = "^1.5.0", features = ["rt-multi-thread", "macros"] }
tracing = "^0.1.26"
tracing_subscriber = { package = "tracing-subscriber", version = "^0.2.18" }
warp = "^0.3.1"
inherent = "^0.1.6"
mongodb = "^2.0.0-alpha.1"
bson = "^1.2.2"
derive_more = "^0.99.13"
base64 = "^0.13.0"

[dependencies.request]
package = "reqwest"
version = "^0.11.3"
default-features = false
features = ["json", "rustls-tls"]


[build-dependencies]
anyhow = "^1.0.40"
chrono = "^0.4.19"
git = { package = "git2", version = "^0.13.18" }
semver = "^0.11.0"

[profile.dev]
split-debuginfo = "unpacked"
